Use fullscreen modal on small screen. Issue #23

--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@
 
 .modal-note-background {
     position: fixed; /* Stay in place */
-    z-index: 200; /* Sit on top */
+    z-index: 1051; /* Sit on top */
     padding-top: 100px; /* Location of the box */
     left: 0;
     top: 0;
